{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 90,
  "lineage": "8e3e0b52-d0e5-f9db-f921-4b7a28815cf3",
  "resources": [
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e81303c0ac25c4c1",
            "domain": "vpc",
            "id": "eipalloc-0e81303c0ac25c4c1",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-20-15-35.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.15.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP NAT Gateway - hml"
            },
            "tags_all": {
              "Name": "EIP NAT Gateway - hml"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_vpc.vpc-joao"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_instance",
      "name": "maq-priv-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-0fa98b052dd7904b7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao-hml",
            "id": "i-0fa98b052dd7904b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-001804f383bf38e7e",
            "private_dns": "ip-11-0-11-91.us-east-2.compute.internal",
            "private_ip": "11.0.11.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000011869d9fc6df6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02264d6853bb08272",
            "tags": {
              "Name": "maq-priv-hml-joao-1"
            },
            "tags_all": {
              "Name": "maq-priv-hml-joao-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb35ee08a55d6474"
            ]
          },
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_iam_instance_profile.role-joao",
            "module.vpc-hml.aws_iam_role.role-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_nat_gateway.ngw-joao",
            "module.vpc-hml.aws_security_group.scg-joao",
            "module.vpc-hml.aws_subnet.subnet-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-01fd4843a981a330b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao-hml",
            "id": "i-01fd4843a981a330b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-015517b254c368dd5",
            "private_dns": "ip-11-0-12-20.us-east-2.compute.internal",
            "private_ip": "11.0.12.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05254713c9abcae05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b44b96c95af5d2ae",
            "tags": {
              "Name": "maq-priv-hml-joao-2"
            },
            "tags_all": {
              "Name": "maq-priv-hml-joao-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb35ee08a55d6474"
            ]
          },
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_iam_instance_profile.role-joao",
            "module.vpc-hml.aws_iam_role.role-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_nat_gateway.ngw-joao",
            "module.vpc-hml.aws_security_group.scg-joao",
            "module.vpc-hml.aws_subnet.subnet-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-0f67314b9368db5bd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao-hml",
            "id": "i-0f67314b9368db5bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01e37f1c2519f8565",
            "private_dns": "ip-11-0-13-144.us-east-2.compute.internal",
            "private_ip": "11.0.13.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049f98e29a62e5068",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed08c18b72bfbb93",
            "tags": {
              "Name": "maq-priv-hml-joao-3"
            },
            "tags_all": {
              "Name": "maq-priv-hml-joao-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb35ee08a55d6474"
            ]
          },
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_iam_instance_profile.role-joao",
            "module.vpc-hml.aws_iam_role.role-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_nat_gateway.ngw-joao",
            "module.vpc-hml.aws_security_group.scg-joao",
            "module.vpc-hml.aws_subnet.subnet-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_instance",
      "name": "maq-pub-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-0b985505b7c9b3bba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao-hml",
            "id": "i-0b985505b7c9b3bba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e66752adbef4415c",
            "private_dns": "ip-11-0-1-57.us-east-2.compute.internal",
            "private_ip": "11.0.1.57",
            "public_ip": "3.12.148.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0862d41fb55de51f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041feceba07d66f34",
            "tags": {
              "Name": "maq-pub-hml-joao-1"
            },
            "tags_all": {
              "Name": "maq-pub-hml-joao-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb35ee08a55d6474"
            ]
          },
          "dependencies": [
            "module.vpc-hml.aws_iam_instance_profile.role-joao",
            "module.vpc-hml.aws_iam_role.role-joao",
            "module.vpc-hml.aws_security_group.scg-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-04f5cf005eeefec89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao-hml",
            "id": "i-04f5cf005eeefec89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0720ec77e3b10d333",
            "private_dns": "ip-11-0-2-117.us-east-2.compute.internal",
            "private_ip": "11.0.2.117",
            "public_ip": "3.21.204.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07aac020bffcd0333",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0489664531861c1e0",
            "tags": {
              "Name": "maq-pub-hml-joao-2"
            },
            "tags_all": {
              "Name": "maq-pub-hml-joao-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb35ee08a55d6474"
            ]
          },
          "dependencies": [
            "module.vpc-hml.aws_iam_instance_profile.role-joao",
            "module.vpc-hml.aws_iam_role.role-joao",
            "module.vpc-hml.aws_security_group.scg-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:492737417918:instance/i-010996dd81abc7255",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-joao-hml",
            "id": "i-010996dd81abc7255",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07327238afc8b02ee",
            "private_dns": "ip-11-0-3-20.us-east-2.compute.internal",
            "private_ip": "11.0.3.20",
            "public_ip": "3.15.173.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0488cfefae5d9f0ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f3f1d8a684189ce",
            "tags": {
              "Name": "maq-pub-hml-joao-3"
            },
            "tags_all": {
              "Name": "maq-pub-hml-joao-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb35ee08a55d6474"
            ]
          },
          "dependencies": [
            "module.vpc-hml.aws_iam_instance_profile.role-joao",
            "module.vpc-hml.aws_iam_role.role-joao",
            "module.vpc-hml.aws_security_group.scg-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:internet-gateway/igw-0d9e19a9bf92224b9",
            "id": "igw-0d9e19a9bf92224b9",
            "owner_id": "492737417918",
            "tags": {
              "Name": "igw-joao-hml"
            },
            "tags_all": {
              "Name": "igw-joao-hml"
            },
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e81303c0ac25c4c1",
            "connectivity_type": "public",
            "id": "nat-0f466ee5aa3a64f0a",
            "network_interface_id": "eni-0b1e62dc62a74d2b4",
            "private_ip": "11.0.1.63",
            "public_ip": "3.20.15.35",
            "subnet_id": "subnet-041feceba07d66f34",
            "tags": {
              "Name": "ngw-joao-hml"
            },
            "tags_all": {
              "Name": "ngw-joao-hml"
            }
          },
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-priv-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:route-table/rtb-01bda644e97840e11",
            "id": "rtb-01bda644e97840e11",
            "owner_id": "492737417918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f466ee5aa3a64f0a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-priv-hml-joao"
            },
            "tags_all": {
              "Name": "rt-priv-hml-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_nat_gateway.ngw-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pub-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:route-table/rtb-0f1fe9617c76aa426",
            "id": "rtb-0f1fe9617c76aa426",
            "owner_id": "492737417918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9e19a9bf92224b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pub-hml-joao"
            },
            "tags_all": {
              "Name": "rt-pub-hml-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_vpc.vpc-joao"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089184a69d28065b5",
            "route_table_id": "rtb-01bda644e97840e11",
            "subnet_id": "subnet-02264d6853bb08272"
          },
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_nat_gateway.ngw-joao",
            "module.vpc-hml.aws_route_table.rt-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1e934e487ee8dc7",
            "route_table_id": "rtb-01bda644e97840e11",
            "subnet_id": "subnet-0b44b96c95af5d2ae"
          },
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_nat_gateway.ngw-joao",
            "module.vpc-hml.aws_route_table.rt-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02000f6b5427fe7b9",
            "route_table_id": "rtb-01bda644e97840e11",
            "subnet_id": "subnet-0ed08c18b72bfbb93"
          },
          "dependencies": [
            "module.vpc-hml.aws_eip.eip-ngw-joao",
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_nat_gateway.ngw-joao",
            "module.vpc-hml.aws_route_table.rt-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-priv-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb849948b9b3fa47",
            "route_table_id": "rtb-0f1fe9617c76aa426",
            "subnet_id": "subnet-041feceba07d66f34"
          },
          "dependencies": [
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_route_table.rt-pub-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042efeb2faa96941b",
            "route_table_id": "rtb-0f1fe9617c76aa426",
            "subnet_id": "subnet-0489664531861c1e0"
          },
          "dependencies": [
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_route_table.rt-pub-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081120479a5bc10e6",
            "route_table_id": "rtb-0f1fe9617c76aa426",
            "subnet_id": "subnet-02f3f1d8a684189ce"
          },
          "dependencies": [
            "module.vpc-hml.aws_internet_gateway.igw-joao",
            "module.vpc-hml.aws_route_table.rt-pub-joao",
            "module.vpc-hml.aws_subnet.subnet-pub-joao",
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "scg-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:security-group/sg-0eb35ee08a55d6474",
            "description": "security group de joao - hml",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb35ee08a55d6474",
            "ingress": [],
            "name": "scg-hml-joao",
            "name_prefix": "",
            "owner_id": "492737417918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scg-hml-joao"
            },
            "tags_all": {
              "Name": "scg-hml-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-02264d6853bb08272",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.11.0/24",
            "id": "subnet-02264d6853bb08272",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-priv-hml-joao-1"
            },
            "tags_all": {
              "Name": "subnet-priv-hml-joao-1"
            },
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-0b44b96c95af5d2ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.12.0/24",
            "id": "subnet-0b44b96c95af5d2ae",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-priv-hml-joao-2"
            },
            "tags_all": {
              "Name": "subnet-priv-hml-joao-2"
            },
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-0ed08c18b72bfbb93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "11.0.13.0/24",
            "id": "subnet-0ed08c18b72bfbb93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-priv-hml-joao-3"
            },
            "tags_all": {
              "Name": "subnet-priv-hml-joao-3"
            },
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-041feceba07d66f34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.1.0/24",
            "id": "subnet-041feceba07d66f34",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-pub-hml-joao-1"
            },
            "tags_all": {
              "Name": "subnet-pub-hml-joao-1"
            },
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-0489664531861c1e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-0489664531861c1e0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-pub-hml-joao-2"
            },
            "tags_all": {
              "Name": "subnet-pub-hml-joao-2"
            },
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:subnet/subnet-02f3f1d8a684189ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "11.0.3.0/24",
            "id": "subnet-02f3f1d8a684189ce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492737417918",
            "tags": {
              "Name": "subnet-pub-hml-joao-3"
            },
            "tags_all": {
              "Name": "subnet-pub-hml-joao-3"
            },
            "vpc_id": "vpc-051dc41106e49c53c"
          },
          "dependencies": [
            "module.vpc-hml.aws_vpc.vpc-joao",
            "module.vpc-hml.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-hml",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-joao",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492737417918:vpc/vpc-051dc41106e49c53c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-08d1a8c7ef9193499",
            "default_route_table_id": "rtb-0f9b6792408df4d45",
            "default_security_group_id": "sg-0e989582f2cf660c0",
            "dhcp_options_id": "dopt-22fa9a4b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-051dc41106e49c53c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9b6792408df4d45",
            "owner_id": "492737417918",
            "tags": {
              "Name": "vpc-hml-joao"
            },
            "tags_all": {
              "Name": "vpc-hml-joao"
            }
          }
        }
      ]
    }
  ]
}